Add /reit_metadata endpoint
